--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,50 @@
 <resources>
-    <string name="app_name">free_games</string>
+    <string name="app_name">Free Games</string>
+
+    <string name="mmorpg" translatable="false">mmorpg</string>
+    <string name="shooter">shooter</string>
+    <string name="strategy">strategy</string>
+    <string name="moba" translatable="false">moba</string>
+    <string name="racing">racing</string>
+    <string name="sports">sports</string>
+    <string name="social">social</string>
+    <string name="sandbox">sandbox</string>
+    <string name="open_world">open-world</string>
+    <string name="survival">survival</string>
+    <string name="pvp" translatable="false">pvp</string>
+    <string name="pve" translatable="false">pve</string>
+    <string name="pixel">pixel</string>
+    <string name="voxel">voxel</string>
+    <string name="zombie">zombie</string>
+    <string name="turn_based" translatable="false">turn-based</string>
+    <string name="first_person">first-person</string>
+    <string name="third_person">third-Person</string>
+    <string name="top_down">top-down</string>
+    <string name="tank">tank</string>
+    <string name="space">space</string>
+    <string name="sailing">sailing</string>
+    <string name="side_scroller" translatable="false">side-scroller</string>
+    <string name="superhero">superhero</string>
+    <string name="permadeath">permadeath</string>
+    <string name="card">card</string>
+    <string name="battle_royale">battle-royale</string>
+    <string name="mmo">mmo</string>
+    <string name="mmofps" translatable="false">mmofps</string>
+    <string name="mmotps" translatable="false">mmotps</string>
+    <string name="three_d" translatable="false">3d</string>
+    <string name="two_d" translatable="false">2d</string>
+    <string name="anime">anime</string>
+    <string name="fantasy">fantasy</string>
+    <string name="sci_fi" translatable="false">sci-fi</string>
+    <string name="fighting">fighting</string>
+    <string name="action_rpg">action-rpg</string>
+    <string name="action">action</string>
+    <string name="military">military</string>
+    <string name="martial_arts">martial-arts</string>
+    <string name="flight">flight</string>
+    <string name="low_spec">low-spec</string>
+    <string name="tower_defense">tower-defense</string>
+    <string name="horror">horror</string>
+    <string name="mmorts" translatable="false">mmorts</string>
+    <string name="unknown">unknown</string>
 </resources>
