--- a/app/src/main/res/values-hr-rHR/strings.xml
+++ b/app/src/main/res/values-hr-rHR/strings.xml
@@ -35,4 +35,5 @@
     <string name="tower_defense">tower-defense</string>
     <string name="horror">horor</string>
     <string name="unknown">nepoznato</string>
+    <string name="all">sve</string>
 </resources>
