--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,5 @@
     <string name="horror">horror</string>
     <string name="mmorts" translatable="false">mmorts</string>
     <string name="unknown">unknown</string>
-    <string name="all">sve</string>
+    <string name="all">all</string>
 </resources>
