--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="mmorts" translatable="false">mmorts</string>
     <string name="unknown">unknown</string>
     <string name="all">all</string>
+
+    <string name="publisher">Publisher: %s</string>
 </resources>
